--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ body {
     background-position: center;
     border-radius: 10px;
     margin-right: 20px;
+    position: absolute;
     top: 50px;
     margin-left: 30px;
 }
