--- a/style.css
+++ b/style.css
@@ -132,3 +132,9 @@ body {
     top: 75px;
     margin-left: 150px;
 }
+
+.currently {
+    position: absolute;
+    margin-left: 165px;
+    top: 90px;
+}
