--- a/style.css
+++ b/style.css
@@ -129,13 +129,14 @@ body {
     color: white;
     margin: 0;
     position: absolute;
-    top: 75px;
-    margin-left: 150px;
+    top: 90px;
+    margin-left: 160px;
 }
 
 .currently-playing {
     position: absolute;
-    font-weight: 500;
-    top: 35px;
-    margin-left: 150px;
+    font-weight: 700;
+    top: 55px;
+    margin-left: 160px;
+    font-size: 14px;
 }
