--- a/style.css
+++ b/style.css
@@ -42,11 +42,21 @@ body {
     line-height: 1;
 }
 
+
+.pfpcontainer {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding-right: 20px
+}
+
 .pfp {
-    width: 105px;
-    position: absolute;
-    top: 100px;
-    margin-left: 775px;
+    width: 15vw;
+    max-width: 95px;
+    position: relative;
+    margin-top: -110px;
+    margin-left: 765px;
+    display: block;
     border: 2px solid rgb(255, 228, 152)
 }
 
@@ -77,7 +87,7 @@ body {
 .right_view_girl {
     width: 200px;
     position: absolute;
-    top: 725px;
+    top: 750px;
     margin-left: 970px;
     border: 2px solid #333;
 }
@@ -85,7 +95,7 @@ body {
 .front_view_girl {
     width: 200px;
     position: absolute;
-    top: 725px;
+    top: 750px;
     margin-left: 750px;
     border: 2px solid #333;
 }
@@ -93,7 +103,7 @@ body {
 .side_view_girl {
     width: 200px;
     position: absolute;
-    top: 725px;
+    top: 750px;
     margin-left: 530px;
     border: 2px solid #333;
 }
@@ -146,4 +156,58 @@ img {
     /* Adjust size dynamically */
     max-width: 200px;
     border: 2px solid #333;
+}
+
+.Home {
+    margin-left: 525px;
+    font-size: 17px;
+    display: inline-block;
+    align-items: center;
+    padding: 8px 15px;
+    border: 2px solid #333;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+}
+
+.Home:hover {
+    color: rgb(83, 132, 207);
+}
+
+.Otherstuff {
+    margin-left: 5px;
+    font-size: 17px;
+    display: inline-block;
+    align-items: center;
+    padding: 8px 15px;
+    border: 2px solid #333;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+}
+
+.Otherstuff:hover {
+    color: rgb(83, 132, 207);
+}
+
+.Contact {
+    margin-left: 5px;
+    font-size: 17px;
+    display: inline-block;
+    align-items: center;
+    padding: 8px 15px;
+    border: 2px solid #333;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+}
+
+.Contact:hover {
+    color: rgb(83, 132, 207);
 }
