--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     .pfp {
         width: 80px;
         margin-top: -50px;
-        margin-left: 0;
+        margin-left: 100px;
         /* Reset margin-left */
     }
 }
