--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     font-style: normal;
 }
 
-.title {
+/* .title {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -16,6 +16,14 @@ body {
     margin-top: 50px;
     font-size: 16px;
     padding-bottom: 0px;
+} */
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 630px;
+    margin-top: 20px;
 }
 
 .title-subtext {
