--- a/style.css
+++ b/style.css
@@ -26,6 +26,15 @@ body {
     margin-top: 20px;
 }
 
+
+@media (max-width: 768px) {
+    .title {
+        font-size: 16px;
+        margin-top: 30px;
+        padding: 0 10px;
+    }
+}
+
 .title-subtext {
     display: flex;
     justify-content: flex-start;
