--- a/test/style.css
+++ b/test/style.css
@@ -5,12 +5,16 @@ body {
     font-optical-sizing: auto;
     font-weight: 200;
     font-style: normal;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .title-container {
     display: flex;
     flex-direction: column;
     height: 10vh;
+    max-width: 500vw;
 }
 
 .title-image-wrapper {
@@ -18,28 +22,6 @@ body {
     align-items: center;
     justify-content: flex-start;
     gap: 10px;
-}
-
-.pfp {
-    width: 18vw;
-    max-width: 150px;
-    min-width: 80px;
-    height: auto;
-    flex-shrink: 0;
-    transform: translateY(40px);
-}
-
-@media (min-width: 768px) {
-    .pfp {
-        width: 15vw;
-    }
-}
-
-@media (min-width: 1024px) {
-    .pfp {
-        width: 7vw;
-        max-width: 150px;
-    }
 }
 
 .title h1 {
@@ -53,4 +35,112 @@ body {
 .title-subtext {
     margin: 0;
     line-height: 1;
+    font-weight: 400;
+}
+
+.line {
+    height: 1px;
+    background-color: #333;
+    width: 42vw;
+    margin-top: 10px;
+}
+
+.box {
+    width: 40vw;
+    height: 40vh;
+    background-color: rgba(28, 24, 28, 0.408);
+    border: 2px solid #333;
+    padding: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    text-align: left;
+}
+
+@media (max-width: 768px) {
+    .box {
+        width: 80vw;
+
+        min-width: 280px;
+    }
+
+    .line {
+        width: 85vw;
+
+        min-width: 280px;
+    }
+}
+
+.buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.Home {
+    font-size: 17px;
+    padding: 8px 15px;
+    border: 2px solid #333;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 7px;
+    font-weight: 400;
+    display: inline-block;
+    align-items: center;
+}
+
+.Home:hover {
+    color: rgb(83, 132, 207);
+}
+
+a.Home {
+    text-decoration: none;
+}
+
+.About {
+    font-size: 17px;
+    padding: 8px 15px;
+    border: 2px solid #333;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 7px;
+    font-weight: 400;
+    display: inline-block;
+    align-items: center;
+}
+
+.About:hover {
+    color: rgb(83, 132, 207);
+}
+
+a.About {
+    text-decoration: none;
+}
+
+.Contact {
+    font-size: 17px;
+    padding: 8px 15px;
+    border: 2px solid #333;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 7px;
+    font-weight: 400;
+    display: inline-block;
+    align-items: center;
+}
+
+.Contact:hover {
+    color: rgb(83, 132, 207);
+}
+
+a.Contact {
+    text-decoration: none;
+}
+
+.nira_chan {
+    color: #ffdf9a;
 }
