--- a/style.css
+++ b/style.css
@@ -164,3 +164,10 @@ a.Contact {
     color: white;
     margin: 0;
 }
+
+.currently-playing {
+    font-weight: 700;
+    top: 55px;
+    margin-left: 160px;
+    font-size: 14px;
+}
