--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ a.Contact {
 .container {
     display: flex;
     align-items: flex-start;
+    justify-content: flex-start;
     padding: 20px;
 }
 
