--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ a.Contact {
     width: 100px;
     height: 100px;
     background-size: cover;
-    background-position: center;
+    background-position: left;
     border-radius: 10px;
 }
 
