--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ a.Contact {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    padding-top: 10px;
 }
 
 .image-div {
