--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ body {
     .box {
         width: 80vw;
 
-        min-width: 300px;
+        min-width: 280px;
+
+        min-height: 250px;
     }
 
     .line {
