--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 .Home:hover {
-    color: rgb(115, 156, 218);
+    color: #9af1ff;
 }
 
 a.Home {
@@ -114,7 +114,7 @@ a.Home {
 }
 
 .About:hover {
-    color: rgb(115, 156, 218);
+    color: #9af1ff;
 }
 
 a.About {
@@ -136,7 +136,7 @@ a.About {
 }
 
 .Contact:hover {
-    color: rgb(115, 156, 218);
+    color: #9af1ff;
 }
 
 a.Contact {
