--- a/style.css
+++ b/style.css
@@ -174,3 +174,19 @@ a.Contact {
     padding-left: 20px;
     margin: 0;
 }
+
+
+
+
+
+
+.contactbox {
+    width: 40vw;
+    height: 40vh;
+    background-color: rgba(28, 24, 28, 0.408);
+    border: 2px solid #333;
+    padding: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    text-align: left;
+}
