--- a/style.css
+++ b/style.css
@@ -180,8 +180,8 @@ a.Contact {
 
 
 
-.contactbox {
-    width: 40vw;
+.twitterbox {
+    width: 30vw;
     height: 40vh;
     background-color: rgba(28, 24, 28, 0.408);
     border: 2px solid #333;
