--- a/style.css
+++ b/style.css
@@ -193,13 +193,13 @@ a.Contact {
 }
 
 .twitterbox {
-    width: 20vw;
+    width: 17vw;
     height: 40vh;
     background-color: rgba(28, 24, 28, 0.408);
     border: 2px solid #333;
     padding: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
-    text-align: left;
+    text-align: center;
     flex: 1;
 }
