--- a/style.css
+++ b/style.css
@@ -180,6 +180,8 @@ a.Contact {
 
 .contactbox {
     display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .col1 {
@@ -190,10 +192,11 @@ a.Contact {
 .col2 {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .twitterbox {
-    width: 17vw;
+    width: 19vw;
     height: 40vh;
     background-color: rgba(28, 24, 28, 0.408);
     border: 2px solid #333;
