--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ a.Contact {
 
 .twitterbox {
     width: 19vw;
-    height: 40vh;
+    min-height: 150px;
     background-color: rgba(28, 24, 28, 0.408);
     border: 2px solid #333;
     padding: 10px;
