--- a/style.css
+++ b/style.css
@@ -204,5 +204,8 @@ a.Contact {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
     text-align: center;
-    flex: 1;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
