--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ a.Contact {
 .twitterbox {
     width: 12vw;
     min-height: 150px;
+    min-width: 100px;
     background-color: rgba(28, 24, 28, 0.408);
     border: 2px solid #333;
     padding: 10px;
