--- a/style.css
+++ b/style.css
@@ -200,6 +200,14 @@ a.Contact {
     flex-direction: column;
 }
 
+.col1,
+.col2,
+.col3 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .twitterbox {
     width: 12vw;
     min-height: 150px;
