--- a/style.css
+++ b/style.css
@@ -208,6 +208,15 @@ a.Contact {
     gap: 10px;
 }
 
+.col1,
+.col2,
+.col3 {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+
 .twitterbox {
     width: 12vw;
     min-height: 150px;
