--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ body {
     justify-content: center;
 }
 
+.content-wrapper {
+    animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100 {
+        opacity: 1;
+    }
+}
+
 .title-container {
     display: flex;
     flex-direction: column;
