--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ body {
     opacity: 0;
     animation: fadeIn 0.5s forwards;
 } */
-
-content-wrapper.fade-out {
+a content-wrapper.fade-out {
     opacity: 0;
 }
 
