--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     opacity: 0;
     animation: fadeIn 0.5s forwards;
 } */
-a content-wrapper.fade-out {
+content-wrapper.fade-out {
     opacity: 0;
 }
 
