--- a/style.css
+++ b/style.css
@@ -232,3 +232,19 @@ a.Contact {
         height: min(13vh, 60px);
     }
 }
+
+.link-box {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #18181800;
+    border: 2px solid #333;
+    margin: 0;
+}
+
+.link-box img {
+    display: inline-block;
+    width: 40px;
+    height: auto;
+    margin: 0;
+}
