--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
     color: rgb(255, 255, 255);
     font-family: "Nunito", serif;
     font-optical-sizing: auto;
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 16px;
 }
 
 
@@ -46,21 +47,28 @@ body {
     margin-top: 10px;
 }
 
+.box-container {
+    display: flex;
+    gap: 10px;
+}
+
 .box {
-    width: 40vw;
+    width: 22vw;
     background-color: rgba(28, 24, 28, 0.408);
     border: 2px solid #333;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
-    text-align: left;
+    border-radius: 5px;
+    font-size: 17px;
+    font-weight: 400;
 }
+
 
 @media (max-width: 768px) {
     .box {
-        width: 80vw;
+        width: 40vw;
 
-        min-width: 280px;
+        min-width: 140px;
 
         height: min(45vh, 350px);
     }
@@ -72,20 +80,34 @@ body {
     }
 }
 
+
+.box2 {
+    width: 15vw;
+    background-color: rgba(28, 24, 28, 0.408);
+    border: 2px solid #333;
+    padding: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    font-size: 17px;
+    font-weight: 400;
+}
+
 .buttons {
     display: flex;
+    justify-content: right;
     gap: 10px;
+    border: 2px solid #333;
+    border-radius: 5px;
 }
 
 .Home {
     font-size: 17px;
     padding: 8px 15px;
-    border: 2px solid #333;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
     user-select: none;
     color: rgb(255, 255, 255);
-    border-radius: 7px;
+    border-radius: 5px;
     font-weight: 400;
     display: inline-block;
     align-items: center;
@@ -102,12 +124,11 @@ a.Home {
 .About {
     font-size: 17px;
     padding: 8px 15px;
-    border: 2px solid #333;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
     user-select: none;
     color: rgb(255, 255, 255);
-    border-radius: 7px;
+    border-radius: 5px;
     font-weight: 400;
     display: inline-block;
     align-items: center;
@@ -124,12 +145,11 @@ a.About {
 .Contact {
     font-size: 17px;
     padding: 8px 15px;
-    border: 2px solid #333;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
     user-select: none;
     color: rgb(255, 255, 255);
-    border-radius: 7px;
+    border-radius: 5px;
     font-weight: 400;
     display: inline-block;
     align-items: center;
@@ -144,7 +164,7 @@ a.Contact {
 }
 
 .nira_chan {
-    color: #ff9ac1
+    color: #9ad7ff
 }
 
 .container {
@@ -238,7 +258,7 @@ a.Contact {
     width: 40px;
     height: 40px;
     background-color: #18181800;
-    border: 2px solid #333;
+    border: 2px solid #ff9ac1;
     margin: 0;
 }
 
