--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: rgb(255, 255, 255);
     font-family: "Nunito", serif;
     font-optical-sizing: auto;
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     display: flex;
     align-items: center;
@@ -31,13 +31,14 @@ body {
 }
 
 .title {
-    font-size: 16px;
+    font-size: 15x;
 }
 
 .title-subtext {
     margin: 0;
     line-height: 1;
     font-weight: 400;
+    font-size: 18px;
 }
 
 .line {
