--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     height: 1px;
     background-color: #333;
     width: 42vw;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .box-container {
@@ -72,6 +72,12 @@ body {
         min-width: 140px;
 
         height: min(45vh, 350px);
+    }
+
+    .box2 {
+        width: 17vw;
+
+        min-width: 150px;
     }
 
     .line {
@@ -234,7 +240,7 @@ a.Contact {
     border: 2px solid #333;
     padding: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
+    border-radius: 5px;
     text-align: center;
 
     display: flex;
