--- a/style.css
+++ b/style.css
@@ -66,19 +66,30 @@ body {
 
 
 @media (max-width: 768px) {
+
+    .box-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
     .box {
-        width: 35vw;
+        width: 80vw;
 
         min-width: 140px;
 
-        height: min(45vh, 350px);
+        height: min(20vh, 350px);
     }
 
     .box2 {
-        width: 17vw;
+        width: 80vw !important;
 
-        min-width: 150px;
+        min-width: 140px;
+
+        height: min(15vh, 350px);
+
     }
+
+
 
     .line {
         width: 85vw;
