--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 
         min-width: 140px;
 
-        height: min(20vh, 350px);
+        height: auto;
     }
 
     .box2 {
@@ -85,7 +85,7 @@ body {
 
         min-width: 140px;
 
-        height: min(15vh, 350px);
+        height: auto;
 
     }
 
