--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .twittersvg {
-    width: 2vw;
+    width: 1.5vw;
     height: auto;
     padding-top: 5px;
 }
@@ -88,7 +88,7 @@ body {
 
 .box {
     width: 22vw;
-    background-color: rgba(28, 24, 28, 0.408);
+    background-color: rgba(14, 14, 14, 0.086);
     border: 2px solid #333;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -133,7 +133,7 @@ body {
 
 .box2 {
     width: 15vw;
-    background-color: rgba(28, 24, 28, 0.408);
+    background-color: rgba(14, 14, 14, 0.086);
     border: 2px solid #333;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -306,6 +306,10 @@ a.Contact {
 
         height: min(13vh, 60px);
     }
+}
+
+.friends {
+    padding-left: 10px;
 }
 
 .link-box {
