--- a/style.css
+++ b/style.css
@@ -408,3 +408,24 @@ a.Contact {
 
     }
 }
+
+.kosukadev {
+    font-size: 18px;
+    padding: 8px 15px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    user-select: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    font-weight: 400;
+    display: inline-block;
+    align-items: center;
+}
+
+.kosukadev:hover {
+    color: #9af1ff;
+}
+
+a.kosukadev {
+    text-decoration: none;
+}
