--- a/style.css
+++ b/style.css
@@ -40,9 +40,14 @@ body {
 }
 
 .twittersvg {
+    display: flex;
+    align-items: center;
+    width: auto;
+}
+
+.twittersvg svg {
     width: 1.5vw;
     height: auto;
-    padding-top: 5px;
 }
 
 .title-container {
@@ -147,12 +152,11 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    gap: 10px;
 }
 
 .button-border {
-
     display: flex;
+    align-items: center;
 }
 
 .Home {
@@ -409,9 +413,9 @@ a.Contact {
     }
 }
 
-.kosukadev {
-    font-size: 18px;
-    padding: 8px 15px;
+/* .kosukadev {
+    font-size: 22px;
+    padding: 8px;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
     user-select: none;
@@ -420,6 +424,7 @@ a.Contact {
     font-weight: 400;
     display: inline-block;
     align-items: center;
+    margin-right: auto;
 }
 
 .kosukadev:hover {
@@ -428,4 +433,30 @@ a.Contact {
 
 a.kosukadev {
     text-decoration: none;
+} */
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.left-link {
+    font-size: 24px;
+    color: white;
+    font-weight: 800;
+}
+
+.left-link:hover {
+    color: #9af1ff;
+}
+
+a.left-link {
+    text-decoration: none;
+}
+
+.right-links {
+    display: flex;
+    align-items: center;
 }
