--- a/style.css
+++ b/style.css
@@ -482,3 +482,34 @@ a.left-link {
     display: flex;
     align-items: center;
 }
+
+.blender-wrapper {
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.top-box {
+    display: flex;
+    width: 100%;
+    height: 30vh;
+}
+
+.top-box img {
+    width: 33.33%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.bottom-box {
+    display: flex;
+    width: 100%;
+    height: 30vh;
+}
+
+.bottom-box img {
+    width: 33.33%;
+    height: 100%;
+    object-fit: contain;
+}
