--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-    background-color: #181818;
+    background: linear-gradient(to bottom, #1b191b, #1d1d1d);
+    background-repeat: no-repeat scroll;
+    background-size: cover;
+    background-attachment: fixed;
     color: rgb(255, 255, 255);
     font-family: "Nunito", serif;
     font-optical-sizing: auto;
@@ -93,13 +96,13 @@ body {
 
 .box {
     width: 22vw;
-    background-color: #a8b3de11;
     border: 2px solid #333;
+    background-color: #a8b3de11;
     padding: 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     font-size: 17px;
     font-weight: 400;
+    box-shadow: 0 0 2px 2px #c4baff69;
 }
 
 
@@ -138,7 +141,7 @@ body {
 
 .box2 {
     width: 13vw;
-    background-color: rgba(207, 178, 245, 0.035);
+    background-color: rgba(218, 178, 245, 0.035);
     border: 2px solid #333;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -490,10 +493,20 @@ a.left-link {
     gap: 10px;
 }
 
+@media (max-width: 768px) {
+
+    .blender-wrapper {
+        width: 80vw;
+    }
+}
+
 .top-box {
     display: flex;
     width: 100%;
     height: 30vh;
+    box-shadow: 0 0 5px 2px #c4baff69;
+    border-radius: 5px;
+    background-color: #6f677d1e;
 }
 
 .top-box img {
