--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
 }
 
 .Home:hover {
-    color: #3c59dd;
+    color: #823cdd;
     ;
 }
 
@@ -198,7 +198,7 @@ a.Home {
 }
 
 .About:hover {
-    color: #3c59dd;
+    color: #823cdd;
     ;
 }
 
@@ -220,7 +220,7 @@ a.About {
 }
 
 .Contact:hover {
-    color: #3c59dd;
+    color: #823cdd;
     ;
 }
 
@@ -474,7 +474,7 @@ a.kosukadev {
 }
 
 .left-link:hover {
-    color: #3c59dd;
+    color: #6b37ad;
 }
 
 a.left-link {
