--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 
 .box {
     width: 22vw;
-    border: 2px solid #333;
+    border: 2px solid #c4baff69;
     background-color: #a8b3de11;
     padding: 20px;
     border-radius: 5px;
