--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to bottom, #1b191b, #1d1d1d);
+    background: linear-gradient(to bottom, #3c3c46, #000000);
     background-repeat: no-repeat scroll;
     background-size: cover;
     background-attachment: fixed;
@@ -96,13 +96,12 @@ body {
 
 .box {
     width: 22vw;
-    border: 2px solid #333;
     padding: 20px;
     border-radius: 5px;
     font-size: 17px;
     font-weight: 400;
-    background-color: rgba(92, 79, 100, 0.035);
-    /* box-shadow: 0 0 2px 2px #c4baff69; */
+    background-color: #292929;
+    box-shadow: 0 0 4px 2px #c4baff;
 }
 
 
@@ -141,10 +140,8 @@ body {
 
 .box2 {
     width: 13vw;
-    background-color: rgba(218, 178, 245, 0.035);
-    /* border: 2px solid #333; */
+    background-color: #292929;
     padding: 20px;
-    box-shadow: 0 0 2px 2px #c4baff69;
     border-radius: 5px;
     font-size: 17px;
     font-weight: 400;
@@ -380,7 +377,7 @@ a.Contact {
 
 .projectcol1box {
     padding-top: 10px;
-    background-color: #1f1f1f;
+    background-color: #292929;
     border: 2px solid #333;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -395,7 +392,7 @@ a.Contact {
 
 .projectcol2box {
     padding-top: 10px;
-    background-color: #1f1f1f;
+    background-color: #292929;
     border: 2px solid #333;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
