--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ a.Home {
 }
 
 .About:hover {
-    color: #823cdd;
+    color: #9263dd;
     ;
 }
 
@@ -217,7 +217,7 @@ a.About {
 }
 
 .Contact:hover {
-    color: #823cdd;
+    color: #9263dd;
     ;
 }
 
@@ -471,7 +471,7 @@ a.kosukadev {
 }
 
 .left-link:hover {
-    color: #6b37ad;
+    color: #9263dd;
 }
 
 a.left-link {
