--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ body {
     font-size: 16px;
 }
 
+@media (max-width: 768px) {
+    body {
+        background: linear-gradient(to bottom, #3c3c46 0%, #000000 60%);
+        background-repeat: no-repeat scroll;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+}
+
 .svgs {
     display: flex;
     justify-content: flex-start;
