--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to bottom, #3c3c46, #000000);
+    background: linear-gradient(to bottom, #65657c, #000 100%);
     background-repeat: no-repeat scroll;
     background-size: cover;
     background-attachment: fixed;
