--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to bottom, #65657c, rgb(115, 115, 139), #000 100%);
+    background: linear-gradient(to bottom, #46444e, #635d6d, #7a7c83);
     background-repeat: no-repeat scroll;
     background-size: cover;
     background-attachment: fixed;
