--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ a.left-link {
     height: 30vh;
     box-shadow: 0 0 5px 2px #c4baff69;
     border-radius: 5px;
-    background-color: #6f677d1e;
+    background-color: #2c2a30;
 }
 
 .top-box img {
