--- a/style.css
+++ b/style.css
@@ -63,14 +63,16 @@ body {
 
 .title h1 {
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 .title {
-    margin-top: 0px;
+    margin-top: 20px;
 }
 
 .title-subtext {
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
     line-height: 1;
     font-weight: 400;
     font-size: 18px;
@@ -78,7 +80,7 @@ body {
 
 .line {
     height: 1px;
-    background-color: #888888;
+    background-color: #3b3b3b;
     width: 40vw;
     margin-top: 20px;
     margin-bottom: 0px;
@@ -173,7 +175,7 @@ body {
 }
 
 .Home:hover {
-    color: #823cdd;
+    color: rgb(202, 183, 255);
     ;
 }
 
@@ -195,7 +197,7 @@ a.Home {
 }
 
 .About:hover {
-    color: #9263dd;
+    color: rgb(202, 183, 255);
     ;
 }
 
@@ -217,7 +219,7 @@ a.About {
 }
 
 .Contact:hover {
-    color: #9263dd;
+    color: rgb(202, 183, 255);
     ;
 }
 
@@ -471,7 +473,7 @@ a.kosukadev {
 }
 
 .left-link:hover {
-    color: #9263dd;
+    color: rgb(202, 183, 255);
 }
 
 a.left-link {
