--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 .title-subtext {
     margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     line-height: 1;
     font-weight: 400;
     font-size: 18px;
@@ -373,4 +373,35 @@ a.left-link {
 .icon-container img {
     width: 30px;
     height: auto;
+}
+
+.title-icon-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+.locationbox,
+.timebox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1d1d1d;
+    border: 2px solid #333;
+    border-radius: 5px;
+    width: 1.8vw;
+    height: 3.4vh;
+}
+
+.locationbox img,
+.timebox img {
+    width: 1.2vw;
+}
+
+.icon-text {
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
